# nornir-srl

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  example.clab.yml  fsc.py  gnmi.py  gnmi_test.py  main.py  mypy.ini  nornir_config.yaml  nornir_srl config demo.ipynb  pyproject.toml
.cursor/agents/: clab-inspector.md
.github/workflows/: build.yml  ci.yml
clab-4l2s/ca/root/: root-ca.pem
demo/: .aliases.rc  .demo.clab.yml.bak  demo.clab.yaml  groups.yaml  hosts.yaml  nornir_config.yaml  run_demo.sh
demo/startup/: l1.json  l2.json  l3.json  l4.json  root-ca.pem  s1.json  s2.json  tor12.json  tor34.json
intent/1_interfaces/: values.yaml
intent/3_network_instance_default/: values.yaml
intent/templates/: 1_interfaces_list.j2
intent/vars/1_interfaces/: itfs.yaml
intent/vars/2_policies/: 1.yaml  9.yaml
intent/vars/3_network_instance_default/: 0_ni.yaml  clab-4l2s-l1_ni.yaml  clab-4l2s-l2.yaml
inventory/: groups.yaml  hosts.yaml
nornir_srl/: __init__.py  cli.py  exceptions.py  fsc.py  intent.py  mcp_server.py
nornir_srl/connections/: __init__.py  gnmi.py  helpers.py  ifstats.py  interfaces.py  layer2.py  neighbor_discovery.py  routing.py  srlinux.py  system.py
nornir_srl/tasks/: __init__.py  helpers.py  load.py  srl_config.py
nornir_srl/tasks/gnmi/: get.py  helpers.py  set.py
nornir_srl/utils/: logging_config.py
tests/: flat.py  main.py  nornir_config.yaml  test_mcp_server.py  test_nornir_srl.py  test_reports.py
tests/intent/infra/templates/: 0_system.j2  1_interfaces.j2  1_interfaces_container.sav  2_policies.j2  3_network_instance.j2
tests/intent/infra/vars/: 0_system.yaml  1_interfaces.yaml  2_policies_1.yaml  2_policies_9.yaml  30_ni_generic.yaml  31_ni_leafs.yaml  31_ni_spines.yaml  39_ni_clab-4l2s-l1.yaml  39_ni_clab-4l2s-l2.yaml  39_ni_clab-4l2s-l3.yaml  39_ni_clab-4l2s-l4.yaml  39_ni_clab-4l2s-s1.yaml  39_ni_clab-4l2s-s2.yaml
tests/inventory/: groups.yaml  hosts.yaml
tests/templates/: interfaces.j2
